@@ -16,15 +16,10 @@
 
 package io.appium.java_client.android;
 
-import com.google.common.collect.ImmutableMap;
 import io.appium.java_client.MobileCommand;
-import org.apache.commons.lang3.StringUtils;
 import org.openqa.selenium.remote.RemoteWebElement;
 
-import java.util.AbstractMap;
 import java.util.Map;
-
-import static com.google.common.base.Preconditions.checkArgument;
 
 /**
  * This util class helps to prepare parameters of Android-specific JSONWP
@@ -37,8 +32,9 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> currentActivityCommand() {
-        return new AbstractMap.SimpleEntry<>(CURRENT_ACTIVITY, ImmutableMap.of());
+        return Map.entry(CURRENT_ACTIVITY, Map.of());
     }
 
     /**
@@ -46,23 +42,9 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> currentPackageCommand() {
-        return new AbstractMap.SimpleEntry<>(GET_CURRENT_PACKAGE, ImmutableMap.of());
-    }
-
-    /**
-     * This method forms a {@link Map} of parameters for the ending of the test coverage.
-     *
-     * @param intent intent to broadcast.
-     * @param path   path to .ec file.
-     * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
-     */
-    public static Map.Entry<String, Map<String, ?>> endTestCoverageCommand(String intent,
-        String path) {
-        String[] parameters = new String[] {"intent", "path"};
-        Object[] values = new Object[] {intent, path};
-        return new AbstractMap.SimpleEntry<>(
-                END_TEST_COVERAGE, prepareArguments(parameters, values));
+        return Map.entry(GET_CURRENT_PACKAGE, Map.of());
     }
 
     /**
@@ -73,7 +55,7 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      */
     public static Map.Entry<String, Map<String, ?>> getSupportedPerformanceDataTypesCommand() {
-        return new AbstractMap.SimpleEntry<>(GET_SUPPORTED_PERFORMANCE_DATA_TYPES, ImmutableMap.of());
+        return Map.entry(GET_SUPPORTED_PERFORMANCE_DATA_TYPES, Map.of());
     }
 
     /**
@@ -106,51 +88,52 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      */
     public static Map.Entry<String, Map<String, ?>> getPerformanceDataCommand(
                     String packageName, String dataType, int dataReadTimeout) {
-        String[] parameters = new String[] {"packageName", "dataType", "dataReadTimeout"};
-        Object[] values = new Object[] {packageName, dataType, dataReadTimeout};
-        return new AbstractMap.SimpleEntry<>(
-            GET_PERFORMANCE_DATA, prepareArguments(parameters, values));
+        return Map.entry(GET_PERFORMANCE_DATA, Map.of(
+                "packageName", packageName,
+                "dataType", dataType,
+                "dataReadTimeout", dataReadTimeout
+        ));
     }
 
     /**
-     * This method forms a {@link Map} of parameters to
-     * Retrieve the display density of the Android device.
+     * This method forms a {@link Map} of parameters to retrieve the display density of the Android device.
      *
-     * @return a key-value pair. The key is the command name. The value is a
-     * {@link Map} command arguments.
+     * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> getDisplayDensityCommand() {
-        return new AbstractMap.SimpleEntry<>(GET_DISPLAY_DENSITY, ImmutableMap.of());
+        return Map.entry(GET_DISPLAY_DENSITY, Map.of());
     }
 
     /**
      * This method forms a {@link Map} of parameters for the getting of a network connection value.
      *
-     * @return a key-value pair. The key is the command name. The value is a
-     * {@link Map} command arguments.
+     * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> getNetworkConnectionCommand() {
-        return new AbstractMap.SimpleEntry<>(GET_NETWORK_CONNECTION, ImmutableMap.of());
+        return Map.entry(GET_NETWORK_CONNECTION, Map.of());
     }
 
     /**
-     * This method forms a {@link Map} of parameters to
-     * Retrieve visibility and bounds information of the status and navigation bars.
+     * This method forms a {@link Map} of parameters to retrieve visibility and bounds information of the status and
+     * navigation bars.
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> getSystemBarsCommand() {
-        return new AbstractMap.SimpleEntry<>(GET_SYSTEM_BARS, ImmutableMap.of());
+        return Map.entry(GET_SYSTEM_BARS, Map.of());
     }
 
     /**
-     * This method forms a {@link java.util.Map} of parameters for the
-     * finger print authentication invocation.
+     * This method forms a {@link Map} of parameters for the finger print authentication invocation.
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> isLockedCommand() {
-        return new AbstractMap.SimpleEntry<>(IS_LOCKED, ImmutableMap.of());
+        return Map.entry(IS_LOCKED, Map.of());
     }
 
     /**
@@ -159,9 +142,9 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      * @param fingerPrintId finger prints stored in Android Keystore system (from 1 to 10)
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> fingerPrintCommand(int fingerPrintId) {
-        return new AbstractMap.SimpleEntry<>(FINGER_PRINT,
-            prepareArguments("fingerprintId", fingerPrintId));
+        return Map.entry(FINGER_PRINT, Map.of("fingerprintId", fingerPrintId));
     }
 
     /**
@@ -169,8 +152,9 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> openNotificationsCommand() {
-        return new AbstractMap.SimpleEntry<>(OPEN_NOTIFICATIONS, ImmutableMap.of());
+        return Map.entry(OPEN_NOTIFICATIONS, Map.of());
     }
 
     /**
@@ -179,58 +163,12 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      * @param bitMask The bitmask of the desired connection
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> setConnectionCommand(long bitMask) {
-        String[] parameters = new String[] {"name", "parameters"};
-        Object[] values = new Object[] {"network_connection", ImmutableMap.of("type", bitMask)};
-        return new AbstractMap.SimpleEntry<>(
-                SET_NETWORK_CONNECTION, prepareArguments(parameters, values));
-    }
-
-    /**
-     * This method forms a {@link Map} of parameters for the activity starting.
-     *
-     * @param appPackage      The package containing the activity. [Required]
-     * @param appActivity     The activity to start. [Required]
-     * @param appWaitPackage  Automation will begin after this package starts. [Optional]
-     * @param appWaitActivity Automation will begin after this activity starts. [Optional]
-     * @param intentAction  Intent action which will be used to start activity [Optional]
-     * @param intentCategory  Intent category which will be used to start activity [Optional]
-     * @param intentFlags  Flags that will be used to start activity [Optional]
-     * @param optionalIntentArguments Additional intent arguments that will be used to
-     *                                start activity [Optional]
-     * @param stopApp         Stop app on reset or not
-     * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
-     * @throws IllegalArgumentException when any required argument is empty
-     */
-    public static Map.Entry<String, Map<String, ?>> startActivityCommand(String appPackage,
-        String appActivity, String appWaitPackage, String appWaitActivity,
-        String intentAction, String intentCategory, String intentFlags,
-        String optionalIntentArguments, boolean stopApp) throws IllegalArgumentException {
-
-        checkArgument((!StringUtils.isBlank(appPackage)
-                && !StringUtils.isBlank(appActivity)),
-            String.format("'%s' and '%s' are required.", "appPackage", "appActivity"));
-
-        String targetWaitPackage = !StringUtils.isBlank(appWaitPackage) ? appWaitPackage : "";
-        String targetWaitActivity = !StringUtils.isBlank(appWaitActivity) ? appWaitActivity : "";
-        String targetIntentAction = !StringUtils.isBlank(intentAction) ? intentAction : "";
-        String targetIntentCategory = !StringUtils.isBlank(intentCategory) ? intentCategory : "";
-        String targetIntentFlags = !StringUtils.isBlank(intentFlags) ? intentFlags : "";
-        String targetOptionalIntentArguments = !StringUtils.isBlank(optionalIntentArguments)
-            ? optionalIntentArguments : "";
-
-        ImmutableMap<String, ?> parameters = ImmutableMap
-            .<String, Object>builder().put("appPackage", appPackage)
-            .put("appActivity", appActivity)
-            .put("appWaitPackage", targetWaitPackage)
-            .put("appWaitActivity", targetWaitActivity)
-            .put("dontStopAppOnReset", !stopApp)
-            .put("intentAction", targetIntentAction)
-            .put("intentCategory", targetIntentCategory)
-            .put("intentFlags", targetIntentFlags)
-            .put("optionalIntentArguments", targetOptionalIntentArguments)
-            .build();
-        return new AbstractMap.SimpleEntry<>(START_ACTIVITY, parameters);
+        return Map.entry(SET_NETWORK_CONNECTION, Map.of(
+                "name", "network_connection",
+                "parameters", Map.of("type", bitMask)
+        ));
     }
 
     /**
@@ -238,17 +176,19 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> toggleLocationServicesCommand() {
-        return new AbstractMap.SimpleEntry<>(TOGGLE_LOCATION_SERVICES, ImmutableMap.of());
+        return Map.entry(TOGGLE_LOCATION_SERVICES, Map.of());
     }
 
     /**
-     * This method forms a {@link java.util.Map} of parameters for the element.
+     * This method forms a {@link Map} of parameters for the element.
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> unlockCommand() {
-        return new AbstractMap.SimpleEntry<>(UNLOCK, ImmutableMap.of());
+        return Map.entry(UNLOCK, Map.of());
     }
 
 
@@ -260,14 +200,13 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      * @param value a new value
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
-    public static Map.Entry<String, Map<String, ?>>  replaceElementValueCommand(
+    @Deprecated
+    public static Map.Entry<String, Map<String, ?>> replaceElementValueCommand(
         RemoteWebElement remoteWebElement, String value) {
-        String[] parameters = new String[] {"id", "value"};
-        Object[] values =
-            new Object[] {remoteWebElement.getId(), value};
-
-        return new AbstractMap.SimpleEntry<>(
-                REPLACE_VALUE, prepareArguments(parameters, values));
+        return Map.entry(REPLACE_VALUE, Map.of(
+                "id", remoteWebElement.getId(),
+                "value", value
+        ));
     }
 
     /**
@@ -279,14 +218,13 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> sendSMSCommand(
             String phoneNumber, String message) {
-        ImmutableMap<String, ?> parameters = ImmutableMap
-                .<String, Object>builder().put("phoneNumber", phoneNumber)
-                .put("message", message)
-                .build();
-
-        return new AbstractMap.SimpleEntry<>(SEND_SMS, parameters);
+        return Map.entry(SEND_SMS, Map.of(
+                "phoneNumber", phoneNumber,
+                "message", message
+        ));
     }
 
     /**
@@ -298,11 +236,13 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> gsmCallCommand(
             String phoneNumber, GsmCallActions gsmCallActions) {
-        String[] parameters = new String[] {"phoneNumber", "action"};
-        Object[] values = new Object[]{phoneNumber, gsmCallActions.name().toLowerCase()};
-        return new AbstractMap.SimpleEntry<>(GSM_CALL, prepareArguments(parameters, values));
+        return Map.entry(GSM_CALL, Map.of(
+                "phoneNumber", phoneNumber,
+                "action", gsmCallActions.name().toLowerCase()
+        ));
     }
 
     /**
@@ -313,13 +253,14 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> gsmSignalStrengthCommand(
             GsmSignalStrength gsmSignalStrength) {
-        return new AbstractMap.SimpleEntry<>(GSM_SIGNAL,
-                prepareArguments(
+        return Map.entry(GSM_SIGNAL,
+                Map.of(
                         // https://github.com/appium/appium/issues/12234
-                        new String[] {"signalStrengh", "signalStrength" },
-                        new Object[] {gsmSignalStrength.ordinal(), gsmSignalStrength.ordinal()}
+                        "signalStrengh", gsmSignalStrength.ordinal(),
+                        "signalStrength", gsmSignalStrength.ordinal()
                 ));
     }
 
@@ -331,10 +272,10 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> gsmVoiceCommand(
             GsmVoiceState gsmVoiceState) {
-        return new AbstractMap.SimpleEntry<>(GSM_VOICE,
-                prepareArguments("state", gsmVoiceState.name().toLowerCase()));
+        return Map.entry(GSM_VOICE, Map.of("state", gsmVoiceState.name().toLowerCase()));
     }
 
     /**
@@ -345,10 +286,10 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> networkSpeedCommand(
             NetworkSpeed networkSpeed) {
-        return new AbstractMap.SimpleEntry<>(NETWORK_SPEED,
-                prepareArguments("netspeed", networkSpeed.name().toLowerCase()));
+        return Map.entry(NETWORK_SPEED, Map.of("netspeed", networkSpeed.name().toLowerCase()));
     }
 
     /**
@@ -359,10 +300,10 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> powerCapacityCommand(
             int percent) {
-        return new AbstractMap.SimpleEntry<>(POWER_CAPACITY,
-                prepareArguments("percent", percent));
+        return Map.entry(POWER_CAPACITY, Map.of("percent", percent));
     }
 
     /**
@@ -373,10 +314,10 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> powerACCommand(
             PowerACState powerACState) {
-        return new AbstractMap.SimpleEntry<>(POWER_AC_STATE,
-                prepareArguments("state", powerACState.name().toLowerCase()));
+        return Map.entry(POWER_AC_STATE, Map.of("state", powerACState.name().toLowerCase()));
     }
 
     /**
@@ -384,8 +325,9 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> toggleWifiCommand() {
-        return new AbstractMap.SimpleEntry<>(TOGGLE_WIFI, ImmutableMap.of());
+        return Map.entry(TOGGLE_WIFI, Map.of());
     }
 
     /**
@@ -393,8 +335,9 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> toggleAirplaneCommand() {
-        return new AbstractMap.SimpleEntry<>(TOGGLE_AIRPLANE_MODE, ImmutableMap.of());
+        return Map.entry(TOGGLE_AIRPLANE_MODE, Map.of());
     }
 
     /**
@@ -402,7 +345,8 @@ public class AndroidMobileCommandHelper extends MobileCommand {
      *
      * @return a key-value pair. The key is the command name. The value is a {@link Map} command arguments.
      */
+    @Deprecated
     public static Map.Entry<String, Map<String, ?>> toggleDataCommand() {
-        return new AbstractMap.SimpleEntry<>(TOGGLE_DATA, ImmutableMap.of());
+        return Map.entry(TOGGLE_DATA, Map.of());
     }
 }
